# fastapi-django

./: .gitignore  README.md  manage.py  pyproject.toml
.github/workflows/: migrate.yaml
src/config/: config.py
src/core/: config.py  consts.py
src/django_stuff/: __init__.py  asgi.py  django_settings.py  urls.py  wsgi.py
src/fastapi_django/: __init__.py  admin.py  lifespan.py  main.py  models.py  router.py
src/fastapi_django/db/: base.py  primary_key.py
src/fastapi_django/migrations/: 0001_initial.py  0001_squashed_0004_alter_user_id.py  0002_user_deleted_at_alter_user_id_and_more.py  0003_alter_user_id.py  0004_alter_user_id.py
src/fastapi_django_admin/: __init__.py  asgi.py  django_settings.py  urls.py  wsgi.py
staticfiles/admin/js/: SelectFilter2.js  calendar.js
tests/: test_django_serving.py
