[project]
name = "fastapi-django"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Soof Golan", email = "soofgolan@gmail.com" }
]
dependencies = [
    "fastapi>=0.105.0",
    "uvicorn[standard]>=0.24.0.post1",
    "django>=4.2.8",
    "pydantic>=2.5.2",
    "pydantic-settings>=2.1.0",
    "dj-database-url>=2.1.0",
    "a2wsgi>=1.9.0",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=23.12.0",
    "pytest>=7.4.3",
    "ruff>=0.1.8",
    "pre-commit>=3.5.0",
    "jupyter>=1.0.0",
    "django-extensions>=3.2.3",
    "ipython>=8.18.1",
]

[tool.hatch.metadata]
allow-direct-references = true
